[package]
name = "yellowsun"
version = "0.2.3"
authors = ["Kaz Wesley <keziahw@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "CryptoNight hash implementation for Monero and related cryptocurrency"
keywords = ["crypto", "hash", "monero"]
categories = ["cryptography"]
repository = "https://github.com/kazcw/yellowsun"

[dependencies]
groestl-aesni = { version = "0.2", optional = true }
jh-x86_64 = { version = "0.2", optional = true }
libc = { version = "0.2", optional = true }
keccak = "0.1.0"
blake-hash = "0.3"
skein-hash = "0.3"
sha3 = "0.8.1"

# WASM-compatible dependencies
getrandom = { version = "0.2", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
hex-literal = "0.1"

[features]
default = ["native"]
dev = []
native = ["groestl-aesni", "jh-x86_64", "libc"]
wasm = ["getrandom", "wasm-bindgen"]

[[example]]
name = "hash_away"
required-features = ["dev"]

[profile.test]
opt-level = 2

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
