[package]
name = "yellowsun"
version = "0.2.3"
authors = ["Kaz Wesley <keziahw@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "CryptoNight hash implementation for Monero and related cryptocurrency"
keywords = ["crypto", "hash", "monero"]
categories = ["cryptography"]
repository = "https://github.com/kazcw/yellowsun"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake-hash = "0.3"
skein-hash = "0.3"
sha3 = "0.8.1"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

[features]
default = []
dev = []
wasm = []

[profile.test]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
